@@ -3,7 +3,6 @@ Microsoft Visual Studio Solution File, Format Version 11.00
 # Visual C++ Express 2010
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "all", "all.vcxproj", "{5339F39B-0A44-4248-972C-F8833B0F5537}"
 	ProjectSection(ProjectDependencies) = postProject
-		{58C6355B-ED8A-4F0D-8911-D8A77E7E2096} = {58C6355B-ED8A-4F0D-8911-D8A77E7E2096}
 		{B823D5B9-6B5A-4CC8-AF07-DDFE8C8E3488} = {B823D5B9-6B5A-4CC8-AF07-DDFE8C8E3488}
 	EndProjectSection
 EndProject
@@ -29,14 +28,10 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "config", "config.vcxproj", "{2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ds390", "src\ds390\ds390.vcxproj", "{14A8A991-BAD6-49EB-84FB-6F6CF12B436D}"
-	ProjectSection(ProjectDependencies) = postProject
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5} = {EA40C4BB-7537-4422-AE03-629A05F3D4C5}
-	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "hc08", "src\hc08\hc08.vcxproj", "{6FA87476-0FAB-4518-9845-12EFEBBCE03F}"
 	ProjectSection(ProjectDependencies) = postProject
 		{2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1} = {2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1}
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5} = {EA40C4BB-7537-4422-AE03-629A05F3D4C5}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "librarian", "support\librarian\librarian.vcxproj", "{FC989BCF-4AAD-4F53-8A21-3D6FF8F2F0B5}"
@@ -44,36 +39,26 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "makebin", "support\makebin\makebin.vcxproj", "{B823D5B9-6B5A-4CC8-AF07-DDFE8C8E3488}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "mcs51", "src\mcs51\mcs51.vcxproj", "{9FACDB81-BE66-42D0-95F5-EA2FA3B09065}"
-	ProjectSection(ProjectDependencies) = postProject
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5} = {EA40C4BB-7537-4422-AE03-629A05F3D4C5}
-	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "packihx", "support\packihx\packihx.vcxproj", "{437B836F-BEE5-43B8-9821-4B0E5E328575}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "pic16", "src\pic16\pic16.vcxproj", "{7E09A25E-1C9D-438D-85DB-8535F134890D}"
 	ProjectSection(ProjectDependencies) = postProject
 		{2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1} = {2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1}
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5} = {EA40C4BB-7537-4422-AE03-629A05F3D4C5}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "sdcpp", "support\cpp\sdcpp.vcxproj", "{57BCB0F8-EF4A-4688-9B36-55A8F6DC93BF}"
 EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "src", "src\src.vcxproj", "{F9485499-151B-4886-935C-7D687C4A0549}"
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "sdcc", "src\sdcc.vcxproj", "{F9485499-151B-4886-935C-7D687C4A0549}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "z80", "src\z80\z80.vcxproj", "{7444A72F-C7C6-4F90-9A62-2D46240B52DB}"
-	ProjectSection(ProjectDependencies) = postProject
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5} = {EA40C4BB-7537-4422-AE03-629A05F3D4C5}
-	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "pic14", "src\pic14\pic14.vcxproj", "{B96E942E-39F5-4C7C-97FD-A095DE6847C6}"
 	ProjectSection(ProjectDependencies) = postProject
 		{2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1} = {2F87BA6F-8EE1-48D0-9817-6BA30BDDB3C1}
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5} = {EA40C4BB-7537-4422-AE03-629A05F3D4C5}
 	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "sdcdb", "debugger\mcs51\sdcdb.vcxproj", "{76B78C5A-6B31-4BA1-9226-F1409B48F839}"
-EndProject
-Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "yacc", "src\yacc.vcxproj", "{EA40C4BB-7537-4422-AE03-629A05F3D4C5}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "asrab", "sdas\asrab\asrab.vcxproj", "{F47A26F0-2D57-4A1F-86CF-6E3F82D3E877}"
 EndProject
@@ -103,10 +88,6 @@ Global
 		{6E94DB45-345E-4697-98DA-6C72237D6ECA}.Debug|Win32.Build.0 = Debug|Win32
 		{6E94DB45-345E-4697-98DA-6C72237D6ECA}.Release|Win32.ActiveCfg = Release|Win32
 		{6E94DB45-345E-4697-98DA-6C72237D6ECA}.Release|Win32.Build.0 = Release|Win32
-		{58C6355B-ED8A-4F0D-8911-D8A77E7E2096}.Debug|Win32.ActiveCfg = Debug|Win32
-		{58C6355B-ED8A-4F0D-8911-D8A77E7E2096}.Debug|Win32.Build.0 = Debug|Win32
-		{58C6355B-ED8A-4F0D-8911-D8A77E7E2096}.Release|Win32.ActiveCfg = Release|Win32
-		{58C6355B-ED8A-4F0D-8911-D8A77E7E2096}.Release|Win32.Build.0 = Release|Win32
 		{C14982C0-731B-46A0-9DD2-845E3811CF18}.Debug|Win32.ActiveCfg = Debug|Win32
 		{C14982C0-731B-46A0-9DD2-845E3811CF18}.Debug|Win32.Build.0 = Debug|Win32
 		{C14982C0-731B-46A0-9DD2-845E3811CF18}.Release|Win32.ActiveCfg = Release|Win32
@@ -163,10 +144,6 @@ Global
 		{76B78C5A-6B31-4BA1-9226-F1409B48F839}.Debug|Win32.Build.0 = Debug|Win32
 		{76B78C5A-6B31-4BA1-9226-F1409B48F839}.Release|Win32.ActiveCfg = Release|Win32
 		{76B78C5A-6B31-4BA1-9226-F1409B48F839}.Release|Win32.Build.0 = Release|Win32
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5}.Debug|Win32.ActiveCfg = Debug|Win32
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5}.Debug|Win32.Build.0 = Debug|Win32
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5}.Release|Win32.ActiveCfg = Release|Win32
-		{EA40C4BB-7537-4422-AE03-629A05F3D4C5}.Release|Win32.Build.0 = Release|Win32
 		{F47A26F0-2D57-4A1F-86CF-6E3F82D3E877}.Debug|Win32.ActiveCfg = Debug|Win32
 		{F47A26F0-2D57-4A1F-86CF-6E3F82D3E877}.Debug|Win32.Build.0 = Debug|Win32
 		{F47A26F0-2D57-4A1F-86CF-6E3F82D3E877}.Release|Win32.ActiveCfg = Release|Win32
